Adding Candidate Detail Render

--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -2,6 +2,9 @@
 {% block title %}Candidates Overview - ALTERA{% endblock %}
 
 {% block content %}
+  {% include "partials/candidates_table.html" %}
+{% endblock %}
+
 
 <div class="flex items-start justify-between mb-4">
   <div>
